# MinecraftConsoles

./: .gitignore  .gitmodules  AGENTS.md  README.md
OurEra/: README.md  project.godot  runtime_profile_after_streaming_opt.json  runtime_profile_long.json  runtime_profile_no_shadows.json  runtime_profile_on.json  runtime_profile_peak_adaptive.json  runtime_profile_peak_smoothed.json  startup_profile_default.json  startup_profile_headless.json  startup_profile_low.json
OurEra/assets/textures/: terrain.png.import
OurEra/native/voxel_mesher/: CMakeLists.txt  README.md  ourera_mesher.gdextension  ourera_mesher.gdextension.uid
OurEra/native/voxel_mesher/src/: greedy_mesher_native.cpp  greedy_mesher_native.h  register_types.cpp
OurEra/scenes/: Main.tscn
OurEra/scenes/ui/: game_ui_root.tscn
OurEra/scripts/: block_defs.gd  block_defs.gd.uid  player_controller.gd  player_controller.gd.uid  voxel_chunk.gd  voxel_chunk.gd.uid  world.gd  world.gd.uid
OurEra/scripts/content/: block_behaviors.gd  block_behaviors.gd.uid  block_defs.gd  block_defs.gd.uid  content_db.gd  content_db.gd.uid  game_mode_defs.gd  game_mode_defs.gd.uid  game_rules.gd  game_rules.gd.uid  item_defs.gd  item_defs.gd.uid  loot_tables.gd  loot_tables.gd.uid  recipe_defs.gd  recipe_defs.gd.uid
OurEra/scripts/entities/: entity_base.gd  entity_base.gd.uid  entity_system.gd  entity_system.gd.uid
OurEra/scripts/render/: collision_builder.gd  collision_builder.gd.uid  material_registry.gd  material_registry.gd.uid  mesh_builder_backend.gd  (+9 more)
OurEra/shaders/: voxel_blocks.gdshader  voxel_blocks.gdshader.uid
(+50 files in other folders)
